# db

./: Cargo.toml  DEVELOPER.md  claude.md
dbdata/: catalog.json
dbdata/tables/: users.tbl
dbdata/wal/: log.jsonl
src/: lib.rs  main.rs  server.rs
src/engine/: buffer.rs  catalog.rs  executor.rs  mod.rs  storage.rs
src/sql/: mod.rs
testdata/: catalog.json
testdata/wal/: log.jsonl
