[package]
name = "rust_pg_db"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
sqlparser = "0.43"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
bytes = "1"
parking_lot = "0.12"
lru = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "4", features = ["derive"] }
tempfile = "3"
rstest = "0.21"
proptest = "1"
serial_test = "3"
assert_cmd = "2"
predicates = "3"
